[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["simshi <simonshi@gmail.com>"]
description = "K/V store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[[bin]]
name = "kvs-client"
test = false

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.1"
failure = "0.1.8"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
rand = "0.8.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
